--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "2.1.1",
+    "@sendgrid/mail": "^8.1.4",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
+    "@types/nodemailer": "^6.4.17",
     "lucide-react": "0.483.0",
     "next": "14.1.0",
+    "nodemailer": "^6.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
