--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
+    "sharp": "^0.34.3",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
